--- a/index.html
+++ b/index.html
@@ -1,110 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<!-- bootstrap -->
+    <!-- bootstrap -->
 
-		<!-- icons -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
 
-		<!-- css -->
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-			crossorigin="anonymous"
-		/>
+    <!-- css -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 
-		<!-- js -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-			crossorigin="anonymous"
-			defer
-		></script>
+    <!-- js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+      defer
+    ></script>
 
+    <link rel="stylesheet" href="./style.css" />
 
-    <link rel="stylesheet" href="style.css" />
-		<script src="genericTags.js" defer></script>
-		<script src="index.js" defer></script>
-		<script src="../js/scrollDown.js" defer></script>
+    <script src="./js/main.js" defer></script>
+
     <title>Page d'accueil</title>
   </head>
   <body>
-    <div class="bg-brand-secondary">
-      <!-- Navbar -->
-      <header class="container" style="height: 10vh">
-        <nav class="navbar">
-          <a class="navbar-brand" href="index.html">
-            <img src="../media/logo_mobile.png" width="50" alt="Logo" />
-          </a>
-
-          <i class="bi bi-list text-brand-primary fs-0" id="burgerMenuIcon"></i>
-        </nav>
-      </header>
-    </div>
-    <!-- Burger menu (hidden at start) -->
-    <div id="burgerExpanded" class="d-none">
-      <ul
-        class="container list-unstyled text-center text-shadow d-flex flex-column justify-content-evenly"
-        style="height: 85vh"
-      >
-        <li class="fs-4">
-          <a
-            href="./pages/product.html#products"
-            class="text-uppercase text-brand-primary"
-          >
-            Ombrières solaires
-          </a>
-        </li>
-        <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
-        <li class="fs-4">
-          <a
-            href="./pages/product.html"
-            class="text-uppercase text-brand-primary"
-          >
-            Produits
-          </a>
-        </li>
-        <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">
-            Carte interactive
-          </a>
-        </li>
-        <li class="fs-4">
-          <a
-            href="./pages/activities.html"
-            class="text-uppercase text-brand-primary"
-          >
-            Activités
-          </a>
-        </li>
-
-        <li><hr class="text-brand-ternary border-5 opacity-75" /></li>
-        <li class="fs-4">
-          <a href="" class="text-uppercase text-brand-primary">
-            Nous contacter
-          </a>
-        </li>
-        <li class="fs-4">
-          <a
-            href="./pages/propos.html"
-            class="text-uppercase text-brand-primary"
-          >
-            À propos
-          </a>
-        </li>
-      </ul>
-    </div>
-    <!-- End burger menu -->
-
     <main id="main" class="container">
       <!-- First frame -->
       <section
-        id="firstFrame"
+        id="frame1"
         class="d-flex flex-column justify-content-evenly p-3"
         style="height: 90vh"
       >
@@ -159,23 +94,10 @@
             gages de confiance pour nos clients.
           </p>
         </div>
-        <div
-          class="container-fluid d-flex justify-content-center align-items-center"
-        >
-          <a href="">
-            <div
-              class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
-              style="height: 45px; width: 45px"
-            >
-              <!--mettre le style dans le CSS /!\-->
-              <i class="fs-1 bi bi-chevron-double-down"></i>
-            </div>
-          </a>
-        </div>
       </section>
       <!-- Second frame -->
       <section
-        id="secondFrame"
+        id="frame2"
         class="d-flex flex-column justify-content-evenly p-3"
         style="height: 100vh"
       >
@@ -201,7 +123,12 @@
             de chaque ombrière et le nombre de bornes de recharge.
           </p>
         </div>
-        <div class="row position-relative p-2">
+        <div
+          class="row position-relative p-2"
+          data-aos="flip-up"
+          data-aos-delay="300"
+          data-aos-duration="700"
+        >
           <img
             src="../media/map.png"
             class="img-fluid opacity-75 p-0 rounded"
@@ -215,22 +142,9 @@
             </p>
           </div>
         </div>
-        <div
-          class="container-fluid d-flex justify-content-center align-items-center"
-        >
-          <a href="">
-            <div
-              class="border rounded-circle d-flex justify-content-center align-items-center bg-brand-secondary text-brand-primary fw-bold"
-              style="height: 45px; width: 45px"
-            >
-              <!--Style dans css !-->
-              <i class="fs-1 bi bi-chevron-double-down"></i>
-            </div>
-          </a>
-        </div>
       </section>
       <section
-        id="thirdFrame"
+        id="frame3"
         class="d-flex flex-column justify-content-evenly p-3"
         style="height: 100vh"
       >
@@ -347,51 +261,5 @@
         </div>
       </section>
     </main>
-
-    <footer class="container-fluid p-3">
-      <div id="logo__footer" class="row col-10 rounded mx-auto mt-5">
-        <img
-          class="row mx-auto d-block"
-          src="./media/logo.png"
-          alt="Sunpower logo"
-        />
-      </div>
-      <div id="site_map__footer" class="row p-1 mt-5">
-        <ul class="col list-unstyled">
-          <li class="mb-3"><a href="">Ombrières solaires</a></li>
-          <li class="mb-3"><a href="">Carte interactive</a></li>
-          <li class="mb-3"><a href="">Produits</a></li>
-          <li class="mb-3"><a href="">Activités</a></li>
-          <li class="mb-3"><a href="">Partenaires</a></li>
-        </ul>
-        <ul class="col list-unstyled">
-          <li class="mb-3"><a href="">À propos</a></li>
-          <li class="mb-3"><a href="">Mentions légales</a></li>
-          <li class="mb-3"><a href="">CGV</a></li>
-          <li class="mb-3"><a href="">Plan du Site</a></li>
-        </ul>
-      </div>
-      <div class="container-fluid text-center">
-        <a href="">Nous contacter</a>
-      </div>
-      <hr />
-      <div
-        id="social__footer"
-        class="container-fluid d-flex justify-content-center"
-        style="height: 5em"
-      >
-        <i class="bi bi-facebook col-3 fs-1 text-center blue"></i>
-        <i class="bi bi-linkedin col-3 fs-1 text-center blue"></i>
-        <i class="bi bi-twitter col-3 fs-1 text-center blue"></i>
-      </div>
-
-      <div id="copyright" class="container text-center">
-        <p>
-          <span>&copy;</span>
-          2022 Sunpower - Produits & Activités autour des énergies renouvelables
-        </p>
-      </div>
-    </footer>
   </body>
-
 </html>
